# SpTRSV

./: .gitignore  .gitmodules  README.md
src/: CMakeLists.txt  csrlenForwardSolve.cpp  europar16.cpp  europar16.hpp  experimental.cpp  experimental.hpp  hpcs17.hpp  main.cpp  method.cpp  method.h  mkl.cpp  mklsolver.hpp  parallel.cpp  profiler.cpp  profiler.h  reference.cpp  sequential.cpp  sequential.hpp  solver.hpp
tools/: benchmark.sh  matrixNames_10K-200M_noncomplex.txt  matrixNames_liu1.txt  matrixNames_liu2.txt  matrixNames_main.txt  matrixNames_park.txt  runDebugTest.sh  runTest.sh
